# ecoscope-eda-core

./: .pre-commit-config.yaml  .yamllint.yaml  README.md  pixi.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: bump-pixi.yml  ci.yml  publish.yml
dev/: mypy.sh  pytest-src.sh
src/ecoscope_eda_core/: __init__.py  conftest.py
src/ecoscope_eda_core/messages/: __init__.py  commands.py  core.py  events.py
src/ecoscope_eda_core/publishers/: __init__.py  core.py  gcp_pubsub.py
src/ecoscope_eda_core/tests/: test_get_workflow_results.py  test_publishers.py
src/ecoscope_eda_core/workflows/: __init__.py  results.py
