[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecoscope-eda-core"
version = "0.1.0"
description = "Common schemas & utilities for event-driven workflows."
authors = [{ name = "Mariano M", email = "marianom@earthranger.com" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
]