[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecoscope-eda-core"
version = "0.1.4"
description = "Common schemas & utilities for event-driven workflows."
authors = [{ name = "Mariano M", email = "marianom@earthranger.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "gcloud-aio-pubsub>=6.1.0,<7",
    "stamina>=25.1.0,<26",
    "pytest>=8.3.5,<9",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=0.26.0,<0.27"
]
